syntax = "proto3";
package protobuf;

/*
   Test for one of
*/
message MessageC {
  // one of field comment
  oneof one_of_field {
    string one_of_string = 1; // one of string comment
    int32 one_of_int = 2; // one of int comment
  }
  string normal = 4;
}